# data_quality_monitoring

./: README.md
data_quality_monitoring/: .gitignore  AGENTS.md  PRD.md  README.md  TECH_DESIGN.md  pyproject.toml  requirements.txt
data_quality_monitoring/config/: .env.example  constants.py  logger_config.py  monitor_configs.py  settings.py
data_quality_monitoring/scripts/: init_db.py  manual_check.py  run_local_test.py  start.py  status.py  stop.py
data_quality_monitoring/src/dqm/alerts/: formatter.py
data_quality_monitoring/src/dqm/checkers/: accuracy.py  base.py  completeness.py  timeliness.py
data_quality_monitoring/src/dqm/cleanup/: cleaner.py
data_quality_monitoring/src/dqm/collectors/: mongo_collector.py  pulsar_collector.py
data_quality_monitoring/src/dqm/core/: coordinator.py  runner.py  scheduler.py
data_quality_monitoring/src/dqm/storage/: mysql_storage.py  repository.py  schema.py
data_quality_monitoring/src/dqm/validators/: field_validator.py  rules.py  type_validator.py
data_quality_monitoring/tests/: conftest.py
data_quality_monitoring/tests/integration/: test_cleanup.py  test_full_pipeline.py  test_m1_completeness.py  test_m2_timeliness.py  test_m3_accuracy.py  test_m4_completeness.py  test_m5_timeliness.py  test_m6_accuracy.py  test_topic_to_check_pipeline.py  test_topic_to_local_check.py
data_quality_monitoring/tests/unit/test_checkers/: test_accuracy.py  test_accuracy_m6.py  test_completeness.py  test_completeness_m4.py  test_timeliness.py  test_timeliness_m5.py
data_quality_monitoring/tests/unit/test_cleanup/: test_cleaner.py
(+3 files in other folders)
