[project]
name = "data-quality-monitor"
version = "0.1.0"
description = "Data Quality Monitoring System"
requires-python = ">=3.9"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
